--- a/package.json
+++ b/package.json
@@ -13,11 +13,21 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.16",
     "@openzeppelin/contracts": "^5.0.0",
+    "@rainbow-me/rainbowkit": "^1.2.0",
+    "@types/body-parser": "^1.19.5",
+    "ahooks": "^3.7.8",
+    "antd": "^5.11.0",
     "dotenv": "^16.3.1",
     "hardhat": "^2.14.0",
+    "iron-session": "^6.3.1",
     "next": "14.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "siwe": "^2.1.4",
+    "use-debounce": "^10.0.0",
+    "viem": "^1.18.9",
+    "wagmi": "^1.4.6"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
@@ -37,7 +47,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "ethers": "^6.4.0",
-    "hardhat": "^2.19.0",
     "hardhat-gas-reporter": "^1.0.8",
     "postcss": "^8",
     "solidity-coverage": "^0.8.0",
