--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "@rainbow-me/rainbowkit": "^1.2.0",
     "@types/body-parser": "^1.19.5",
     "ahooks": "^3.7.8",
+    "alchemy-sdk": "^2.11.0",
     "antd": "^5.11.0",
     "dotenv": "^16.3.1",
+    "form-data": "^4.0.0",
+    "formidable": "^3.5.1",
     "hardhat": "^2.14.0",
     "iron-session": "^6.3.1",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "siwe": "^2.1.4",
     "use-debounce": "^10.0.0",
